@@ -19,19 +19,19 @@ class StringUtilsTest {
     void testValidateAndReplace() {
         String str = "Test123-";
         String replace = "-";
-        String result = stringUtils.validateAndReplace(str, replace);
+        String result = StringUtils.validateAndReplace(str, replace);
         assertNotNull(result);
         assertEquals("Test123-", result);
 
         str = "Test (123)";
         replace = "-";
-        result = stringUtils.validateAndReplace(str, replace);
+        result = StringUtils.validateAndReplace(str, replace);
         assertNotNull(result);
         assertEquals("Test -123-", result);
 
         str = "Test   123";
         replace = "-";
-        result = stringUtils.validateAndReplace(str, replace);
+        result = StringUtils.validateAndReplace(str, replace);
         assertNotNull(result);
         assertEquals("Test   123", result);
     }
@@ -40,25 +40,25 @@ class StringUtilsTest {
     void testGenerator() {
         List<String> codes = new ArrayList<>(Arrays.asList("String_01", "String_02", "String_03"));
         String retrievedCode = "String";
-        String result = stringUtils.generator(codes, retrievedCode);
+        String result = StringUtils.generator(codes, retrievedCode);
         assertNotNull(result);
         assertEquals("String_04", result);
 
         codes = new ArrayList<>(Arrays.asList("String_01", "String_02"));
         retrievedCode = "String";
-        result = stringUtils.generator(codes, retrievedCode);
+        result = StringUtils.generator(codes, retrievedCode);
         assertNotNull(result);
         assertEquals("String_03", result);
 
         codes = new ArrayList<>();
         retrievedCode = "String";
-        result = stringUtils.generator(codes, retrievedCode);
+        result = StringUtils.generator(codes, retrievedCode);
         assertNotNull(result);
         assertEquals("String_01", result);
 
-        codes = Arrays.asList("test_n");
+        codes = List.of("test_n");
         retrievedCode = "test";
-        result = stringUtils.generator(codes, retrievedCode);
+        result = StringUtils.generator(codes, retrievedCode);
         assertEquals("test_01", result);
     }
     @Test
@@ -67,7 +67,7 @@ class StringUtilsTest {
         int maxLength1 = 100;
         String expectedResult1 = "Short string";
 
-        String result1 = stringUtils.truncateString(input1, maxLength1);
+        String result1 = StringUtils.truncateString(input1, maxLength1);
         assertNotNull(result1);
         assertEquals(expectedResult1, result1);
 
@@ -75,7 +75,7 @@ class StringUtilsTest {
         int maxLength2 = 100;
         String expectedResult2 = "This is a long string that exceeds the maximum length of 100 characters";
 
-        String result2 = stringUtils.truncateString(input2, maxLength2);
+        String result2 = StringUtils.truncateString(input2, maxLength2);
         assertNotNull(result2);
         assertEquals(expectedResult2, result2);
     }
